--- a/styles/editContactsResponsive.css
+++ b/styles/editContactsResponsive.css
@@ -92,8 +92,7 @@
     padding: 8px 14px;
   }
   .input div {
-    top: 9px;
-    right: 14px;
+    right: 10px;
   }
   .inputInput {
     font-size: 14px;
